--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GlobeView",
+  "name": "streamingVisualizations",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/SuddenDevelopment/RecordQue.git"
+    "url": "https://github.com/SuddenDevelopment/streaming-visualizations.git"
   },
   "author": "Anthony Aragues <anthony.aragues@gmail.com> (http://suddendevelopment.com)",
   "license": "ISC"
